Fixed an issue with mod display on Firefox

--- a/sqds/static/sqds/mod.css
+++ b/sqds/static/sqds/mod.css
@@ -53,7 +53,7 @@ div.mod div.mod-set {
     zoom: 0.8;
     -moz-transform: scale(0.8);
     transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
+    -moz-transform-origin: -40px -40px;
 }
 
 div.mod.mod-square-e div.mod-set,
